--- a/configs/release_version/deca_detail.yml
+++ b/configs/release_version/deca_detail.yml
@@ -9,8 +9,8 @@
 # why:
 # '''
 # pretrained_modelpath: '/ps/scratch/yfeng/Data/Projects-data/DECA-training/training/DECA_SIGGRAPH/pretrain/model.tar'
-output_dir: "/ps/scratch/yfeng/Data/Projects-data/DECA-training/training/DECA_release_version/detail"
-pretrained_modelpath: "/ps/scratch/yfeng/Data/Projects-data/DECA-training/training/DECA_release_version/coarse/model.tar"
+output_dir: "/content/drive/MyDrive/CS275_Graphics/Training/detail"
+pretrained_modelpath: "/content/drive/MyDrive/CS275_Graphics/Training/coarse/model.tar"
 dataset:
   batch_size: 6
   K: 3
@@ -25,5 +25,5 @@ train:
   val_steps: 500
   eval_steps: 1000
 dataset:
-  training_data: ['vggface2', 'vox2']
+  training_data: ['ffhq']
 # python main_train_deca_release.py --cfg configs/release_version/deca_coarse.yml
