--- a/configs/release_version/deca_detail.yml
+++ b/configs/release_version/deca_detail.yml
@@ -26,4 +26,5 @@ train:
   eval_steps: 1000
 dataset:
   training_data: ['ffhq']
+  eval_data: ['ffhq']
 # python main_train_deca_release.py --cfg configs/release_version/deca_coarse.yml
